Fixed campaign sidebar spacing

--- a/styles/sass/pages/_campaigns.scss
+++ b/styles/sass/pages/_campaigns.scss
@@ -283,6 +283,7 @@
 
 	.col-30.campaign__sidebar {
 		padding-left: 16px;
+		padding-top: 24px;
 	}
 
 	.campaign__sidebar-cta {
